packages/react-components/src/components/table/table.module.css
@import '../../core/utils/vibrancy.css';

@layer components {
  .Table {
    position: relative;
    width: 100%;
    z-index: 0;
  }

  .TableWrapper {
    -webkit-overflow-scrolling: touch;
    overflow: auto;

    &[data-table-scrolling='true'] {
      max-height: var(--table-height);
      background: var(--table-background);
      overscroll-behavior: contain;
    }
  }

  .TableElement {
    width: 100%;
    border-collapse: collapse;
    font-size: token(--font-size-16);

    &[data-table-loading='true'] {
      pointer-events: none;
      user-select: none;
    }
  }

  .THead {
    box-shadow: inset 0 -3px 0 var(--dimmed-2);
    background: var(--table-background);
    position: sticky;
    top: 0;
    z-index: 2;

    /* stylelint-disable number-max-precision */

    @media not all and (min-resolution: 0.001dpcm) {

      @supports (-webkit-appearance:none) and (stroke-color:transparent) {
        box-shadow: none;
        border-bottom: 3px solid var(--dimmed-2);
      }
    }

    & th {
      padding-top: token(--space-16);
      padding-bottom: token(--space-16);
    }
  }

  .Toast {

    @mixin vibrancy;

    background-color: var(--global-vibrancy-background);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: 4;
    border-radius: token(--radius-8);
    min-block-size: token(--space-56);
  }

  .ExpandButton {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

